# PulinSearchAI

./: .gitignore  README.md  config.py  example.env  llm_service.py  main.py  pyproject.toml  requirements.txt  requriments.txt  search_service.py  test.ipynb
backend/: config.py  llm_service.py  main.py  search_service.py  similarity_sort_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: AnswerSection.tsx  SearchBar.tsx  SourceCard.tsx
frontend/lib/: api.ts
